6.0.6 (not yet released):
- Update OPKG OpenMPI to 1.3.0.
- [Ticket #549] Create the .master script for SystemImager for images created
using the CLI.
- [Ticket #586] Fix problem when using ssh -v to connect to clients.
- [Ticket #591] Add a dependency to syslinux to the oscar-base-scripts RPM. 

6.0.5:
- Update Configurator to 1.0.5.
- Update OPKG C3 to 4.1.4.
- Update OPKG Ganglia to 3.0.10.
- Update OPKG JobMonarch to 0.1.4.
- Update OPKG mta-config to 1.1.1.
- Update OPKG Netbootmgr to 1.7.3.
- Update OPKG pfilter to 1.707.1.
- Update OPKG SGE to 6.1.5.
- Update OPKG SIS to 4.0.6.
- Update OPKG Switcher to 1.0.12.
- Update ODA to 1.4.12.
- Update ORM to 1.4.2.
- Update PackMan to 3.1.12.
- Update RAPT to 2.8.7.
- Update Selector to 1.2.5.
- Update sync_files to 2.5.7.
- Update SystemInstaller to 2.4.10.
- Update Yume to 2.8.11.
- [Ticket #326] Remove the documentation OPKG since the documentation is
managed via the Trac wiki and the PDFs included into the OSCAR binary
packages.
- [Ticket #405] When post image creation scripts fail, the image is deleted.
- [Ticket #520] Ganglia configuration scripts do not generate any error
anymore.
- [Ticket #531] Fix various configuration issues for Ganglia.
- [Ticket #542] Include the documentation into the OSCAR binary packages.
- [Ticket #559] Fix problems when deleting images.
- [Ticket #562] Include cron in the list of package for Debian based images.
- [Ticket #563] Avoid language/locales warnings on Ubuntu systems.
- [Ticket #564] The correct C3 packages are now installed on compute nodes.
- [Ticket #570] Correctly generate ssh keys on the headnode.
- [Ticket #574] Support the specification of multiple Linux distribution online
repositories.
- [Ticket #578] oscar-config does not mess the system up anymore when starting
over.
- [Ticket #582] After starting over and a new bootstrap, the database has now
data about the headnode NIC.
- [Ticket #587] Several issues in the SSH configuration has been fixed, the